examples/test/testpolicy7034.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7034
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key1: value31
      key16: value21
      key3: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value22
          key3: value8
      podSelector:
        matchLabels:
          key40: value37
          key29: value27
          key19: value24
